made smaller version of bg image hopefully will fix issue of not loading on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ div {
 .hero {
   height: 330px;
   width: 100%;
-  background: url("../images/sebastian-engler-65104-unsplash.jpg") no-repeat;
+  background: url("../images/bg-forest.jpg") no-repeat;
 
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
@@ -159,7 +159,7 @@ div {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-position: bottom right;
+  background-position: bottom center;
 }
 
 .name-plate {
